@@ -716,6 +716,8 @@ Release 2.2.1 - UNRELEASED
 
     HDFS-5288. Close idle connections in portmap (Haohui Mai via brandonli)
 
+    HDFS-5407. Fix typos in DFSClientCache (Haohui Mai via brandonli)
+
 Release 2.2.0 - 2013-10-13
 
   INCOMPATIBLE CHANGES
